Co-authored-by: milesmamigonian <milesmamigonian@users.noreply.github.com> Co-authored-by: jackfruitsandwich <jackfruitsandwich@users.noreply.github.com>

--- a/example_ising.ipynb
+++ b/example_ising.ipynb
@@ -42,15 +42,17 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# +1 is spin up\n",
+    "# - 1 is spin down\n",
     "init_random = np.random.random((N,N))\n",
     "lattice_n = np.zeros((N, N))\n",
     "lattice_n[init_random>=0.75] = 1\n",
     "lattice_n[init_random<0.75] = -1\n",
     "\n",
-    "init_random = np.random.random((N,N))\n",
-    "lattice_p = np.zeros((N, N))\n",
-    "lattice_p[init_random>=0.25] = 1\n",
-    "lattice_p[init_random<0.25] = -1"
+    "# init_random = np.random.random((N,N))\n",
+    "# lattice_p = np.zeros((N, N))\n",
+    "# lattice_p[init_random>=0.25] = 1\n",
+    "# lattice_p[init_random<0.25] = -1"
    ]
   },
   {
@@ -59,7 +61,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "plt.imshow(lattice_p)"
+    "plt.imshow(lattice_n)"
    ]
   }
  ],
